snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.pom.sha1
97db5b3f76891c4520bfb15127f0b5dc657938bb